Add shadcn ui in project ibb

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+.bnt-ibb {
+  @apply bg-btnIbb text-white font-semibold py-2 px-4 rounded-md;
+}
