Otimizei o retorno de almas ganhas, pois estava pesado a rota

--- a/src/components/theme-image.module.css
+++ b/src/components/theme-image.module.css
@@ -5,9 +5,11 @@
 @media (prefers-color-scheme: dark) {
     .imgLight {
         display: none;
+        cursor: pointer;
     }
 
     .imgDark {
         display: unset;
+        cursor: pointer;
     }
 }
